k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: edtech
  labels:
    name: edtech
    part-of: edtech
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
    part-of: edtech
