k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ghcr.io/vinoth-kanagaraj-14883/edtech-user-service:latest
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /ready
              port: 8001
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 8001
      targetPort: 8001
